[tool.poetry]
name = "easyq"
version = "0.1.0"
description = "EasyQ is a redis and docker based queueing service."
authors = ["Bernardo Heynemann <heynemann@gmail.com>"]

[tool.poetry.dependencies]
python = "*"
click = "^6.7"
rq = "^0.12.0"
derpconf = "^0.8.2"
flask = "^1.0"
flask-redis = "^0.3.0"
docker = "^3.4"
flask-mongoengine = "^0.9.5"
ujson = "^1.35"
structlog = "^18.1"
flask-rq2 = "^18.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.5"
pytest-sugar = "^0.9.1"
pytest-watch = "^4.2"
jedi = "^0.12.1"
ipdb = "^0.11.0"
preggy = "^1.4"
fakeredis = "^0.12.0"
mongomock = "^3.10"

[tool.poetry.scripts]
eq = 'easyq.cli:main'
easyq = 'easyq.cli:main'
