[tool.poetry]
name = "fastlane"
version = "1.3.6"
description = "fastlane is a redis and docker based queueing service."
authors = ["Bernardo Heynemann <heynemann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^6.7"
redis = "2.10.6"
rq = "^0.12.0"
derpconf = "^0.8.2"
flask = "^1.0"
flask-redis = "^0.3.0"
docker = "^3.4"
flask-mongoengine = "^0.9.5"
ujson = "^1.35"
structlog = "^18.1"
python-dateutil = "^2.7"
rq-scheduler = "^0.8.3"
rq-dashboard = "^0.3.12"
sentry-sdk = "=0.5.5"
raven = "^6.9"
Flask-Redis-Sentinel = "^2.0"
flask-sockets = "^0.2.1"
wsaccel = "^0.6.2"
requests = "^2.21"
pybreaker = "^0.4.5"
pyyaml = "^4.2b1"
flask-cors = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.5"
pytest-sugar = "^0.9.1"
pytest-watch = "^4.2"
jedi = "^0.12.1"
ipdb = "^0.11.0"
preggy = "^1.4"
fakeredis = "^0.12.0"
mongomock = "^3.10"
black = "18.9b0"
python-language-server = "^0.21.3"
requests-mock = "^1.5"
flake8 = "^3.6"
isort = "^4.3"
pylint = "^2.2"
pylint-venv = "^1.0"
pylint-mongoengine = "^0.2.1"
pylint-plugin-utils = "^0.4.0"
Sphinx = "^1.8"
typing = "^3.6"
recommonmark = "^0.5.0"
pygments = "^2.3"
sphinx_bootstrap_theme = "^0.6.5"
mkdocs = "^1.0"
pytest-parallel = "^0.0.9"
colorama = "^0.4.1"

[tool.poetry.scripts]
fl = 'fastlane.cli:main'
fastlane = 'fastlane.cli:main'
